--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "thebyte",
+  "name": "cloudnative-notes",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "isno",
+  "author": "zouyingjie",
   "license": "MIT",
   "scripts": {
     "dev": "vuepress dev .",
@@ -10,12 +10,15 @@
   },
   "devDependencies": {
     "katex": "^0.16.11",
+    "moment": "^2.24.0",
     "vuepress": "2.0.0-rc.0",
     "vuepress-plugin-comment2": "2.0.0-rc.4",
     "vuepress-plugin-md-enhance": "2.0.0-rc.4",
     "vuepress-plugin-reading-time2": "2.0.0-rc.4"
   },
   "dependencies": {
+    "@vuepress/client": "^2.0.0-rc.0",
+    "markdown-it-imsize": "^2.0.1",
     "vue-github-button": "3.1.0"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
