--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudnative-notes",
+  "name": "cloudnativenotes",
   "version": "1.0.0",
   "main": "index.js",
   "author": "zouyingjie",
